--- a/face_recognition.ipynb
+++ b/face_recognition.ipynb
@@ -535,7 +535,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1cd229c4198>"
+       "<matplotlib.image.AxesImage at https://mail.google.com/mail/u/0?ui=2&ik=ae8d5621e4&attid=0.1&permmsgid=msg-f:1733952683556763119&th=18103cc760bc75ef&view=att&disp=safe&realattid=18103cbea55e864a1b81>"
       ]
      },
      "execution_count": 186,
