--- a/face_recognition.ipynb
+++ b/face_recognition.ipynb
@@ -535,7 +535,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1cd229c4198>
+       "<matplotlib.image.AxesImage at 0x1cd229c4198>"
       ]
      },
      "execution_count": 186,
